@@ -27,8 +27,8 @@
  * @library src
  * @modules java.base/jdk.internal.reflect
  * @build java.base/java.util.CSM csm/*
- * @run main/othervm csm/jdk.test.MethodInvokeTest
- * @run main/othervm csm/jdk.test.MethodInvokeTest sm
+ * @run main/othervm -Djava.security.manager=allow csm/jdk.test.MethodInvokeTest
+ * @run main/othervm -Djava.security.manager=allow csm/jdk.test.MethodInvokeTest sm
  * @summary Test proper caller class is bound to method handle for caller-sensitive method
  */
 public class Main {
